fix spacing of guide window elements, implement sample action function onclick, change directory name from shared>guide

--- a/src/app/components/guide/shared.module.css
+++ b/src/app/components/guide/shared.module.css
@@ -79,14 +79,20 @@
   width: 100%;
   height: 100%;
 }
+.guideMiddleBackground {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url("/guide/guideBackground.png");
+  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+}
 .guideMiddle {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background-image: url("/guide/guideBackground.png");
-  background-size: 100% 100%;
+  margin-bottom: 100px;
 }
 .guideOuter {
   width: 100%;
